# DiversifiedTopkSubgraphMatching

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TECHNICAL_REPORT.md
PDD/: CMakeLists.txt
PDD+/graph/: BasicGraph.cpp  CMakeLists.txt  MatchGraph.cpp
PDD+/matching/: GraphQL.cpp  main.cpp
PDD+/test/: test_query.txt
PDD+/test/dataset_test/: WG.txt  all_labels.txt
PDD+/test/dataset_test/data_graph/: 2.graph
PDD+/test/dataset_test/map_info/: 1.txt  2.txt
PDD+/utility/: CMakeLists.txt  Operation.cpp
PDD/configuration/: CMakeLists.txt  Types.h
PDD/ctpl/: CMakeLists.txt
PDD/graph/: BasicGraph.cpp  BasicGraph.h  MatchGraph.cpp  MatchGraph.h
PDD/matching/: CMakeLists.txt  CommandList.cpp  CommandList.h  GraphQL.h  main.cpp
PDD/test/: test_data.txt
PDD/test/dataset_test/data_graph/: 0.graph  1.graph
PDD/test/dataset_test/map_info/: 0.txt
PDD/utility/: CommandParser.cpp  Operation.h
configuration/: CMakeLists.txt  Config.h  Types.h
ctpl/: CMakeLists.txt
graph/: CMakeLists.txt  MatchGraph.cpp  MatchGraph.h
matching/: BuildTable.cpp  BuildTable.h  CMakeLists.txt  CommandList.cpp  CommandList.h  InterMatch.cpp  InterMatch.h  IntraMatch.cpp  IntraMatch.h  main.cpp
ordering-embedding-test/common/: data-1.py  data.py
ordering-embedding-test/subgraph_matching/: alignment.py  config.py  test.py  test.py.bak  train.py
ordering-embedding-train/: requirements.txt
ordering-embedding-train/common/: data.py
ordering-embedding-train/subgraph_matching/: config.py  test.py  train.py  train_dblp.py
prediction/subgraph_matching/: batch_predict.py
test/: distance_matrix.txt  query.graph  test.graph
test/partitions/: 0.graph  1.graph  2.graph
tools/: evaluate_distance.cpp  find_replica.cpp  get_distance_matrix.cpp  get_partition_adj.py  process_partition.py  shortest_path.cpp  show_embedding.cpp
utility/: CMakeLists.txt  CommandParser.h  ComputeSetIntersection.cpp  ComputeSetIntersection.h  analyze_symmetry.h
